more tx example updates

--- a/tx_example/CMakeLists.txt
+++ b/tx_example/CMakeLists.txt
@@ -79,14 +79,14 @@ if(BLADERF_FOUND)
     set(project_libs ${project_libs} ${BLADERF_LIBS})
 endif()
 
-find_package(ArrayFire)
-if(ArrayFire_Unified_FOUND)
-    set(project_includes ${project_includes} ${ArrayFire_INCLUDE_DIRS})
-    set(project_libs ${project_libs} ArrayFire::af)
-    message("ArrayFire_Unified found!")
-else()
-    message("ArrayFire_Unified not found...")
-endif()
+#find_package(ArrayFire)
+#if(ArrayFire_Unified_FOUND)
+#    set(project_includes ${project_includes} ${ArrayFire_INCLUDE_DIRS})
+#    set(project_libs ${project_libs} ArrayFire::af)
+#    message("ArrayFire_Unified found!")
+#else()
+#    message("ArrayFire_Unified not found...")
+#endif()
 
 # find OpenCV
 #message(STATUS "--------------------------------------------------------------------------------")
