working on FFT display

--- a/rx_example/CMakeLists.txt
+++ b/rx_example/CMakeLists.txt
@@ -84,6 +84,7 @@ if(ArrayFire_Unified_FOUND)
     set(project_includes ${project_includes} ${ArrayFire_INCLUDE_DIRS})
     set(project_libs ${project_libs} ArrayFire::af)
     message("ArrayFire_Unified found!")
+    add_definitions(-DUSE_ARRAYFIRE)
 else()
     message("ArrayFire_Unified not found...")
 endif()
