--- a/tx_rx_example/CMakeLists.txt
+++ b/tx_rx_example/CMakeLists.txt
@@ -39,10 +39,10 @@ if(WIN32)
 		set(COMMON_ROOT "D:/Common")
 	elseif(${PLATFORM} STREQUAL "LaptopN")
 		set(COMMON_ROOT "C:/Projects/Common")
-    elseif(${PLATFORM} STREQUAL "BEAST")
-        set(COMMON_ROOT "D:/Common")
+    elseif(${PLATFORM} STREQUAL "Laptop_Beast")
+        set(COMMON_ROOT "C:/Projects/Common")
     else()
-        set(COMMON_ROOT "D:/Common")
+        set(COMMON_ROOT "C:/Projects/Common")
     endif()    
     
 else()
@@ -79,15 +79,15 @@ if(BLADERF_FOUND)
     set(project_libs ${project_libs} ${BLADERF_LIBS})
 endif()
 
-find_package(ArrayFire)
-if(ArrayFire_Unified_FOUND)
-    set(project_includes ${project_includes} ${ArrayFire_INCLUDE_DIRS})
-    set(project_libs ${project_libs} ArrayFire::af)
-    message("ArrayFire_Unified found!")
-    add_definitions(-DUSE_ARRAYFIRE)
-else()
-    message("ArrayFire_Unified not found...")
-endif()
+# find_package(ArrayFire)
+# if(ArrayFire_Unified_FOUND)
+    # set(project_includes ${project_includes} ${ArrayFire_INCLUDE_DIRS})
+    # set(project_libs ${project_libs} ArrayFire::af)
+    # message("ArrayFire_Unified found!")
+    # add_definitions(-DUSE_ARRAYFIRE)
+# else()
+    # message("ArrayFire_Unified not found...")
+# endif()
 
 
 message(" ")
