using array fire

--- a/apt_demod/CMakeLists.txt
+++ b/apt_demod/CMakeLists.txt
@@ -79,15 +79,15 @@ if(BLADERF_FOUND)
     set(project_libs ${project_libs} ${BLADERF_LIBS})
 endif()
 
-# find_package(ArrayFire)
-# if(ArrayFire_Unified_FOUND)
-    # set(project_includes ${project_includes} ${ArrayFire_INCLUDE_DIRS})
-    # set(project_libs ${project_libs} ArrayFire::af)
-    # message("ArrayFire_Unified found!")
-    # add_definitions(-DUSE_ARRAYFIRE)
-# else()
-    # message("ArrayFire_Unified not found...")
-# endif()
+find_package(ArrayFire HINTS "C:/Program Files/ArrayFire/v3/cmake")
+if(ArrayFire_Unified_FOUND)
+    set(project_includes ${project_includes} ${ArrayFire_INCLUDE_DIRS})
+    set(project_libs ${project_libs} ArrayFire::af)
+    message("ArrayFire_Unified found!")
+    add_definitions(-DUSE_ARRAYFIRE)
+else()
+    message("ArrayFire_Unified not found...")
+endif()
 
 # look for opencv
 message(STATUS "--------------------------------------------------------------------------------")
